# docs/swagger.yaml
@@ -66,6 +66,15 @@ definitions:
       user_info:
         $ref: '#/definitions/model.User'
     type: object
+  controller.TestPrintReq:
+    properties:
+      content:
+        type: string
+      copies:
+        type: integer
+    required:
+    - content
+    type: object
   http.Response:
     properties:
       code:
@@ -1001,9 +1010,15 @@ definitions:
       is_default:
         description: 是否为默认打印机：0=否，1=是
         type: integer
+      last_heartbeat:
+        description: 最后心跳时间（可为空）
+        type: string
       name:
         description: 打印机名称
         type: string
+      online:
+        description: 在线状态：0=离线，1=在线，2=异常
+        type: integer
       remark:
         description: 备注
         type: string
@@ -1031,10 +1046,13 @@ definitions:
         type: integer
       is_default:
         type: integer
+      last_heartbeat:
+        description: 最后心跳时间
+        type: string
       name:
         type: string
       online:
-        description: 在线状态：0=离线，1=在线
+        description: 在线状态：0=离线，1=在线，2=异常
         type: integer
       remark:
         type: string
@@ -3802,6 +3820,35 @@ paths:
       security:
       - Bearer: []
       summary: 更新打印机信息
+      tags:
+      - 打印机管理
+  /printers/{id}/test:
+    post:
+      consumes:
+      - application/json
+      description: 向指定打印机发送测试打印
+      parameters:
+      - description: 打印机ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 打印内容
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.TestPrintReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.Response'
+      security:
+      - Bearer: []
+      summary: 测试打印
       tags:
       - 打印机管理
   /printers/all:
